--- a/index.html
+++ b/index.html
@@ -263,6 +263,8 @@
 	   					</div>
 
 	   			</div> <!-- /timeline-block -->
+					
+				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
 	   					<i class="fa fa-graduation-cap"></i>
@@ -395,13 +397,6 @@
 
 	   			<div class="timeline-block">
 
-	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
-	   				</div>
-
-	   				<div class="timeline-header">
-	   					
-	   				</div>
 
 	   				<div class="timeline-content">
 	   					<h4>Hi-C Background Model</h4>
