--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
          <li><a href="https://www.linkedin.com/feed/"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://scholar.google.com/citations?user=xS23yQUAAAAJ&hl=en"><i class="fa fa-graduation-cap"></i></a></li>
          <li><a href="https://github.com/nargesr"><i class="fa fa-github"></i></a></li>
-         <li><a href="https://orcid.org/0000-0001-9326-9954"><i class="fa fa-orcid"></i></a></li>
+         <li><a href="https://orcid.org/0000-0001-9326-9954"><i class="fab fa-orcid"></i></a></li>
          <li><a href="https://www.instagram.com/"><i class="fa fa-instagram"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
