--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
 	   			<h1>Narges Rezaie</h1>
 
 	   			<p class="intro-position">
-	   				<span>PhD Candidate at UC Irvine in Mortazavi Lab</span>
+	   				<span>Post-doc fellow researcher at UC Irvine in Mortazavi Lab</span>
 	   				<span>Bioinformatics</span>
+	   				<span>Computational Biologist</span>
 	   				<span>Pacakge/Software Developement</span>
 	   				<span>Data Analyst</span>
 	   			</p>
@@ -113,7 +114,7 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">I am a PhD Candidate student at the University of California, Irvine in Mathematical, Computational System Biology program (MCSB) in the Mortazavi lab.<br>
+   				<p class="lead">I am a Postdoc at the University of California, Irvine in Mathematical, Computational System Biology program (MCSB) in the Mortazavi lab.<br>
 				I Graduated from Sharif University of Technology in 2018 with a B.S. in Information Technology, Computer Engineering. Coming from computational background, I'm mostly analysing different type of data inclusing bulk and single-cell RNA-seq data and developing software/pipeline. <br>
 				My lab is part of a NIA Consortium to build better late-onset Alzheimer’s Disease models in mouse and I'm mostly in charge of developing and implementing standardized data acquisition and data analysis protocols for the UCI <a href="https://www.model-ad.org/">model-AD</a> data such as single-cell transcriptomics in these new models. <br>
 				My lab is also part of a <a href="https://www.encodeproject.org/">ENCODE Consortium</a> and  <a href="https://igvf.org/">IGVF (Impact of Genomic Variation on Function) Consortium</a> to build better late-onset Alzheimer’s Disease models in mouse and I'm mostly in charge of developing and implementing data analysis protocols as well as devloping software/packages especially for short bulk and single-cell transcriptomics. <br>
@@ -138,7 +139,7 @@
    				</li>
    				<li>
    					<strong>Job:</strong>
-   					<span>Research Assistant</span>
+   					<span>Post-doc fellow researcher</span>
    				</li>
    				<li>
    					<strong>Website:</strong>
@@ -232,13 +233,13 @@
 
 	   					<div class="timeline-header">
 	   						<h3>Director PhD</h3>
-	   						<p>2019-present</p>
+	   						<p>2019-2024</p>
 	   					</div>
 
 	   					<div class="timeline-content">
 	   						<h4><a href="https://ccbs.uci.edu/education/mcsb/">University of California, Irvine</a></h4>
 	   						<p>In Mathematical, Computational System Biology program (MCSB)<br />
-	   						Gpa: 3.95/4<br />
+	   						Gpa: 3.98/4<br />
 	   					</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -306,7 +307,7 @@
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Research Assistant</h3>
+	   					<h3>Psot-doc/Research Assistant</h3>
 	   					<h4><a href="http://crick.bio.uci.edu/">Mortazavi Lab</a></h4>
 	   					<p>2019-present</p>
 	   				</div>
