update profile pic

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 
    			<div class="intro-info">
 
-   				<img src="images/profile-pic.jpg" alt="Profile Picture">
+   				<img src="images/profile-pic.png" alt="Profile Picture">
 
    				<p class="lead">I am a Postdoc at the University of California, Irvine in Mathematical, Computational System Biology program (MCSB) in the Mortazavi lab.<br>
 				I Graduated from Sharif University of Technology in 2018 with a B.S. in Information Technology, Computer Engineering. Coming from computational background, I'm mostly analysing different type of data inclusing bulk and single-cell RNA-seq data and developing software/pipeline. <br>
