--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
 	   					</div>
 
 	   					<div class="timeline-header">
-	   						<h3>Director PhD</h3>
+	   						<h3>Direct PhD</h3>
 	   						<p>2019-2024</p>
 	   					</div>
 
